--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,14 @@
 .msg.active{
     @apply opacity-100 translate-y-0 ;
 }
+
+.card{
+    @apply relative border-2 border-black w-full aspect-square text-2xl flex items-center justify-center text-white shadow-main200 transition-all duration-500 bg-purpleMain200 rounded-full;
+}
+
+.card.base{
+    @apply bg-purpleMain200;
+}
+.card.completed{
+    @apply opacity-40;
+}
